@@ -1,3 +1,9 @@
+2005-04-26  Owen Taylor  <otaylor@redhat.com>
+
+	* doc/public/cairo-sections.txt: Updated.
+
+	* src/cairo-png.c src/cairo.h: Fix up some doc build issues.
+
 2005-04-26  Carl Worth  <cworth@cworth.org>
 
 	* ROADMAP: 
